Fonts add project

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+body {
+  font-family: 'IBM Plex Sans', sans-serif;
+}
+/*# sourceMappingURL=style.css.map */
