Navigation menu class Active

--- a/assets/style/sass/_header.sass
+++ b/assets/style/sass/_header.sass
@@ -12,3 +12,7 @@ header
     max-width: 300px
 .navbar-menu
     display: flex
+    list-style: none
+    color: var(--text-grey)
+.active
+    color: var(--text-dark)
