--- a/assets/style/sass/_theme.sass
+++ b/assets/style/sass/_theme.sass
@@ -2,6 +2,7 @@ body
     /* Text Colors */
     --text-white: #{$white}
     --text-dark: #{$black}
+    --text-grey: #{$grey}
     /* Bacground Colors */
     --bg-white: #{$white}
     --bg-dark: #{$blue-black}
