--- a/assets/style/sass/_header.sass
+++ b/assets/style/sass/_header.sass
@@ -4,6 +4,26 @@ header
     max-height: 80px
     color: var(--text-dark)
     background: var(--bg-white)
+    padding: 15px 0
+    position: relative
+nav
+    width: 100%
+.mobile-menu
+    font-size: 30px
+    padding: 5px
+    background: none
+    border: none
+    cursor: pointer
+.menu-icon
+    background-image: url('data:image/svg+xml,%3Csvg xmlns="http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg" width="2em" height="2em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 32 32"%3E%3Cpath fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8h24M4 16h24M4 24h24"%2F%3E%3C%2Fsvg%3E')
+    width: 30px
+    height: 30px
+    background-size: 100%
+    background-position: center
+    background-repeat: no-repeat
+    display: block
+.menu-icon-close
+    background-image: url('data:image/svg+xml,%3Csvg xmlns="http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 1024 1024"%3E%3Cpath fill="currentColor" d="M764.288 214.592L512 466.88L259.712 214.592a31.936 31.936 0 0 0-45.12 45.12L466.752 512L214.528 764.224a31.936 31.936 0 1 0 45.12 45.184L512 557.184l252.288 252.288a31.936 31.936 0 0 0 45.12-45.12L557.12 512.064l252.288-252.352a31.936 31.936 0 1 0-45.12-45.184z"%2F%3E%3C%2Fsvg%3E')
 .navbar
     display: flex
     padding: 5px 10px
@@ -13,6 +33,21 @@ header
 .navbar-menu
     display: flex
     list-style: none
+.show
+    display: block !important
+    position: absolute
+    width: 100%
+    background: var(--bg-white)
+    top: 80px
+    left: 0
+    right: 0
+    padding: 0 15px 80px 15px
+.navbar-link
     color: var(--text-grey)
+    text-decoration: none
+    transition: .3s
+    &:hover
+        color: var(--text-dark)
 .active
     color: var(--text-dark)
+
