--- a/assets/style/sass/style.sass
+++ b/assets/style/sass/style.sass
@@ -4,6 +4,7 @@
     box-sizing: border-box
 body
     font-family: 'IBM Plex Sans', sans-serif
+@import 'fonts'
 @import 'color'
 @import 'theme'
 @import 'header'
