Flag addons logo + refactor CSS Header

--- a/assets/style/sass/_color.sass
+++ b/assets/style/sass/_color.sass
@@ -6,3 +6,5 @@ $blue-black: #01142F !global
 $green: #45D09E !global
 $yellow: #FFD600 !global
 $red: #E20338 !global
+/* Light Colors */
+$grey-light: #F0F0F0 !global
