--- a/assets/style/sass/_mobile.sass
+++ b/assets/style/sass/_mobile.sass
@@ -6,3 +6,6 @@
         display: none
     .navbar
         justify-content: space-between
+    .navbar-item
+        padding-top: 15px
+        padding-bottom: 15px
