--- a/assets/style/sass/_theme.sass
+++ b/assets/style/sass/_theme.sass
@@ -3,9 +3,10 @@ body
     --text-white: #{$white}
     --text-dark: #{$black}
     --text-grey: #{$grey}
-    /* Bacground Colors */
+    /* Background Colors */
     --bg-white: #{$white}
     --bg-dark: #{$blue-black}
+    --bg-grey-light: #{$grey-light} 
     /* Body Style */
     background: var(--bg-white)
 /* Mode Dark Theme Style */
