refactor header and components SASS

--- a/assets/style/sass/_theme.sass
+++ b/assets/style/sass/_theme.sass
@@ -14,3 +14,4 @@ body
     --text-white: #{$black}
     --text-dark: #{$white}
     --bg-white: #{$blue-black}
+    --bg-grey-light: #{$dark-light} 
