--- a/assets/style/sass/_header.sass
+++ b/assets/style/sass/_header.sass
@@ -41,10 +41,20 @@ nav
     font-weight: 700
     color: var(--text-dark)
     font-size: 24px
+.avatar
+    width: 50px
+    height: auto
+    border-radius: 100%
+    margin-right: 15px
+.avatar-name
+    display: flex
+    flex-wrap: wrap
 .avatar-job
     font-size: 12px
     display: flex
     color: var(--text-grey)
+    width: 100%
+    font-weight: 300
     &::after
         content: ''
         background-image: url('/assets/img/icons/ru.svg')
